[gd_scene load_steps=37 format=3 uid="uid://8asv0ttjjevv"]

[ext_resource type="Texture2D" uid="uid://b5oygt3muxany" path="res://example_2_dudes_in_combat/Old hero2.png" id="1_17igs"]
[ext_resource type="Script" path="res://example_2_dudes_in_combat/combat_dude.gd" id="2_sc0lp"]
[ext_resource type="Texture2D" uid="uid://i2trriwd5qem" path="res://example_2_dudes_in_combat/pistol.png" id="3_50b1q"]
[ext_resource type="Texture2D" uid="uid://xi3uviw8wvrt" path="res://example_2_dudes_in_combat/smg2.png" id="4_xy5sh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s8h08"]
atlas = ExtResource("1_17igs")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8i0h"]
atlas = ExtResource("1_17igs")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p72fe"]
atlas = ExtResource("1_17igs")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcdht"]
atlas = ExtResource("1_17igs")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hlkh"]
atlas = ExtResource("1_17igs")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dikk"]
atlas = ExtResource("1_17igs")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4rhh"]
atlas = ExtResource("1_17igs")
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_86g8m"]
atlas = ExtResource("1_17igs")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uocwp"]
atlas = ExtResource("1_17igs")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnhuj"]
atlas = ExtResource("1_17igs")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3ftt"]
atlas = ExtResource("1_17igs")
region = Rect2(64, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wujbg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8h08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8i0h")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p72fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcdht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hlkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dikk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4rhh")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86g8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uocwp")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_rnhuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3ftt")
}],
"loop": false,
"name": &"take_damage",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_8hvln"]
_data = [Vector2(0.381579, 0), 0.0, 0.0, 0, 0, Vector2(0.625, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_h3qv8"]
_data = [Vector2(0.407895, 0), 0.0, 0.0, 0, 0, Vector2(0.657895, 0.947368), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ohuiw"]
_data = [Vector2(0.368421, 0), 0.0, 0.0, 0, 0, Vector2(0.565789, 0.968421), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_bdv3e"]
_data = [Vector2(0.289474, 1), 0.0, -4.58667, 0, 0, Vector2(1, 0), -0.0516128, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_6s4i8"]
_data = [Vector2(0.381579, 0), 0.0, 0.0, 0, 0, Vector2(0.585526, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_26r2u"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0921053, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_qwe5o"]
_data = [Vector2(0.440789, 0), 0.0, 0.0, 0, 0, Vector2(0.578947, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_oarwd"]
_data = [Vector2(0.407895, 1), 0.0, 0.0, 0, 0, Vector2(0.585526, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_jv1j8"]
_data = [Vector2(0, 0), 0.0, 1.45, 0, 0, Vector2(0.539474, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_k2v3l"]
_data = [Vector2(0.348684, 0), 0.0, 0.0, 0, 0, Vector2(0.651316, 0.873684), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_t6ew6"]
_data = [Vector2(0.381579, 0), 0.0, 0.0, 0, 0, Vector2(0.585526, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_w8agw"]
_data = [Vector2(0.407895, 0), 0.0, 0.0, 0, 0, Vector2(0.565789, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_rbyjd"]
_data = [Vector2(0, 0.789474), 0.0, 0.0, 0, 0, Vector2(0.309211, 0.8), 0.0, 0.0, 0, 0, Vector2(0.592105, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_4cdjo"]
_data = [Vector2(0.388158, 1), 0.0, 0.0, 0, 0, Vector2(0.585526, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_fvnn7"]
_data = [Vector2(0.394737, 0), 0.0, 0.0, 0, 0, Vector2(0.585526, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_gb8xn"]
_data = [Vector2(0, 1), 0.0, -3.53103, 0, 0, Vector2(0.125, 0.189474), -1.45455, -1.45455, 0, 0, Vector2(0.348684, 0), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="AtlasTexture" id="AtlasTexture_l8jsg"]
atlas = ExtResource("1_17igs")
region = Rect2(96, 84, 32, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_eueen"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8jsg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_50b1q")
}],
"loop": true,
"name": &"handgun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_xy5sh")
}],
"loop": true,
"name": &"smg",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_imrvd"]

[sub_resource type="LabelSettings" id="LabelSettings_86kve"]
font_size = 8

[node name="CombatDude" type="AnimatedSprite2D"]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_wujbg")
animation = &"die"
autoplay = "default"
script = ExtResource("2_sc0lp")

[node name="UtilityAIAgent" type="UtilityAIAgent" parent="."]
thinking_delay_in_seconds = 0.1

[node name="CombatSensors" type="UtilityAISensorGroup" parent="UtilityAIAgent"]

[node name="MyHealth" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="MyAmmo" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="IAmNearAWeapon" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="IHaveAWeapon" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="IAmALeader" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="IJustGotHit" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="DistanceToClosestEnemy" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="DistanceToSecondClosestEnemy" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="DistanceToClosestFriendly" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="FriendliesNeedForHealing" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="EnemyIsInWeaponsRange" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="AmIDead" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="EnemyIsDead" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="IHaveEnemyAsMyTarget" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="IHaveFollowers" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="MyLeaderForcesRetreat" type="UtilityAISensor" parent="UtilityAIAgent/CombatSensors"]

[node name="Die Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]

[node name="HaveIDied" type="UtilityAIConsideration" parent="UtilityAIAgent/Die Behaviour"]
input_sensor_node_path = NodePath("../../CombatSensors/AmIDead")
activation_curve = SubResource("Curve_8hvln")

[node name="Die" type="UtilityAIAction" parent="UtilityAIAgent/Die Behaviour"]

[node name="Take Damage Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]
cooldown_seconds = 5.0

[node name="DidIJustGetShot" type="UtilityAIConsideration" parent="UtilityAIAgent/Take Damage Behaviour"]
input_sensor_node_path = NodePath("../../CombatSensors/IJustGotHit")
activation_curve = SubResource("Curve_h3qv8")

[node name="TakeDamage" type="UtilityAIAction" parent="UtilityAIAgent/Take Damage Behaviour"]

[node name="Retreat Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]
can_be_interrupted = true

[node name="ShouldIFlee" type="UtilityAIConsiderationGroup" parent="UtilityAIAgent/Retreat Behaviour"]
evaluation_method = -1480189216

[node name="FirstNonZeroOfTheseApplies" type="UtilityAIConsiderationGroup" parent="UtilityAIAgent/Retreat Behaviour/ShouldIFlee"]
evaluation_method = 5

[node name="DidMyLeaderForceRetreat" type="UtilityAIConsideration" parent="UtilityAIAgent/Retreat Behaviour/ShouldIFlee/FirstNonZeroOfTheseApplies"]
input_sensor_node_path = NodePath("../../../../CombatSensors/MyLeaderForcesRetreat")
activation_curve = SubResource("Curve_ohuiw")

[node name="IsMyHealthLow" type="UtilityAIConsideration" parent="UtilityAIAgent/Retreat Behaviour/ShouldIFlee/FirstNonZeroOfTheseApplies"]
input_sensor_node_path = NodePath("../../../../CombatSensors/MyHealth")
activation_curve = SubResource("Curve_bdv3e")

[node name="FindRandomLocationAndFlee" type="UtilityAIActionGroup" parent="UtilityAIAgent/Retreat Behaviour"]

[node name="OrderRetreat" type="UtilityAIAction" parent="UtilityAIAgent/Retreat Behaviour/FindRandomLocationAndFlee"]

[node name="FindRandomLocation" type="UtilityAIAction" parent="UtilityAIAgent/Retreat Behaviour/FindRandomLocationAndFlee"]

[node name="Flee" type="UtilityAIAction" parent="UtilityAIAgent/Retreat Behaviour/FindRandomLocationAndFlee"]

[node name="Go To Weapon Range Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]

[node name="ShouldIGoCloserToTarget" type="UtilityAIConsiderationGroup" parent="UtilityAIAgent/Go To Weapon Range Behaviour"]
evaluation_method = 4

[node name="DoIHaveAWeapon" type="UtilityAIConsideration" parent="UtilityAIAgent/Go To Weapon Range Behaviour/ShouldIGoCloserToTarget"]
input_sensor_node_path = NodePath("../../../CombatSensors/IHaveAWeapon")
activation_curve = SubResource("Curve_6s4i8")

[node name="DoIHaveAmmo" type="UtilityAIConsideration" parent="UtilityAIAgent/Go To Weapon Range Behaviour/ShouldIGoCloserToTarget"]
input_sensor_node_path = NodePath("../../../CombatSensors/MyAmmo")
activation_curve = SubResource("Curve_26r2u")

[node name="DoIHaveAnEnemyAsMyTarget" type="UtilityAIConsideration" parent="UtilityAIAgent/Go To Weapon Range Behaviour/ShouldIGoCloserToTarget"]
input_sensor_node_path = NodePath("../../../CombatSensors/IHaveEnemyAsMyTarget")
activation_curve = SubResource("Curve_qwe5o")

[node name="IsEnemyOutsideWeaponRange" type="UtilityAIConsideration" parent="UtilityAIAgent/Go To Weapon Range Behaviour/ShouldIGoCloserToTarget"]
input_sensor_node_path = NodePath("../../../CombatSensors/EnemyIsInWeaponsRange")
activation_curve = SubResource("Curve_oarwd")

[node name="IsMyHealthOK" type="UtilityAIConsideration" parent="UtilityAIAgent/Go To Weapon Range Behaviour/ShouldIGoCloserToTarget"]
input_sensor_node_path = NodePath("../../../CombatSensors/MyHealth")
activation_curve = SubResource("Curve_jv1j8")

[node name="MoveTowardsEnemy" type="UtilityAIAction" parent="UtilityAIAgent/Go To Weapon Range Behaviour"]

[node name="Fire At Target Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]
cooldown_seconds = 1.0

[node name="CanIFireAWeapon" type="UtilityAIConsiderationGroup" parent="UtilityAIAgent/Fire At Target Behaviour"]
evaluation_method = 4

[node name="DoIHaveAWeapon" type="UtilityAIConsideration" parent="UtilityAIAgent/Fire At Target Behaviour/CanIFireAWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/IHaveAWeapon")
activation_curve = SubResource("Curve_6s4i8")

[node name="DoIHaveAmmo" type="UtilityAIConsideration" parent="UtilityAIAgent/Fire At Target Behaviour/CanIFireAWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/MyAmmo")
activation_curve = SubResource("Curve_26r2u")

[node name="DoIHaveAnEnemyAsMyTarget" type="UtilityAIConsideration" parent="UtilityAIAgent/Fire At Target Behaviour/CanIFireAWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/IHaveEnemyAsMyTarget")
activation_curve = SubResource("Curve_qwe5o")

[node name="IsEnemyInWeaponsRange" type="UtilityAIConsideration" parent="UtilityAIAgent/Fire At Target Behaviour/CanIFireAWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/EnemyIsInWeaponsRange")
activation_curve = SubResource("Curve_k2v3l")

[node name="IsMyHealthOK" type="UtilityAIConsideration" parent="UtilityAIAgent/Fire At Target Behaviour/CanIFireAWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/MyHealth")
activation_curve = SubResource("Curve_jv1j8")

[node name="FireWeapon" type="UtilityAIAction" parent="UtilityAIAgent/Fire At Target Behaviour"]

[node name="Bark Command Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]
cooldown_seconds = 10.0

[node name="DoIHaveAuthorityToGiveOrders" type="UtilityAIConsiderationGroup" parent="UtilityAIAgent/Bark Command Behaviour"]
evaluation_method = 4

[node name="AmIALeader" type="UtilityAIConsideration" parent="UtilityAIAgent/Bark Command Behaviour/DoIHaveAuthorityToGiveOrders"]
input_sensor_node_path = NodePath("../../../CombatSensors/IAmALeader")
activation_curve = SubResource("Curve_t6ew6")

[node name="DoIHaveFollowers" type="UtilityAIConsideration" parent="UtilityAIAgent/Bark Command Behaviour/DoIHaveAuthorityToGiveOrders"]
input_sensor_node_path = NodePath("../../../CombatSensors/IHaveFollowers")
activation_curve = SubResource("Curve_w8agw")

[node name="RandomOrder" type="UtilityAIActionGroup" parent="UtilityAIAgent/Bark Command Behaviour"]
action_execution_rule = 1

[node name="OrderAttackMyTarget" type="UtilityAIAction" parent="UtilityAIAgent/Bark Command Behaviour/RandomOrder"]

[node name="OrderRetreat" type="UtilityAIAction" parent="UtilityAIAgent/Bark Command Behaviour/RandomOrder"]

[node name="Go To Nearest Weapon Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]
can_be_interrupted = true

[node name="IsThereAReasonToPickupAWeapon" type="UtilityAIConsiderationGroup" parent="UtilityAIAgent/Go To Nearest Weapon Behaviour"]
evaluation_method = 4

[node name="IDoNotHaveAWeapon" type="UtilityAIConsideration" parent="UtilityAIAgent/Go To Nearest Weapon Behaviour/IsThereAReasonToPickupAWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/IHaveAWeapon")
activation_curve = SubResource("Curve_rbyjd")

[node name="AmIFarAwayFromAWeapon" type="UtilityAIConsideration" parent="UtilityAIAgent/Go To Nearest Weapon Behaviour/IsThereAReasonToPickupAWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/IAmNearAWeapon")
activation_curve = SubResource("Curve_4cdjo")

[node name="ChooseWeaponLocation" type="UtilityAIAction" parent="UtilityAIAgent/Go To Nearest Weapon Behaviour"]

[node name="MoveToLocation" type="UtilityAIAction" parent="UtilityAIAgent/Go To Nearest Weapon Behaviour"]

[node name="Pickup Weapon Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]
can_be_interrupted = true

[node name="CanIPickupAWeapon" type="UtilityAIConsiderationGroup" parent="UtilityAIAgent/Pickup Weapon Behaviour"]
evaluation_method = 4

[node name="IDoNotHaveAWeapon" type="UtilityAIConsideration" parent="UtilityAIAgent/Pickup Weapon Behaviour/CanIPickupAWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/IHaveAWeapon")
activation_curve = SubResource("Curve_rbyjd")

[node name="IAmNearAWeapon" type="UtilityAIConsideration" parent="UtilityAIAgent/Pickup Weapon Behaviour/CanIPickupAWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/IAmNearAWeapon")
activation_curve = SubResource("Curve_fvnn7")

[node name="PickupWeapon" type="UtilityAIAction" parent="UtilityAIAgent/Pickup Weapon Behaviour"]

[node name="Reload Weapon Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]

[node name="ShouldIReloadMyWeapon" type="UtilityAIConsiderationGroup" parent="UtilityAIAgent/Reload Weapon Behaviour"]
evaluation_method = 4

[node name="DoIHaveAWeapon" type="UtilityAIConsideration" parent="UtilityAIAgent/Reload Weapon Behaviour/ShouldIReloadMyWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/IHaveAWeapon")
activation_curve = SubResource("Curve_6s4i8")

[node name="IsMyHealthOK" type="UtilityAIConsideration" parent="UtilityAIAgent/Reload Weapon Behaviour/ShouldIReloadMyWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/MyHealth")
activation_curve = SubResource("Curve_jv1j8")

[node name="AmIOutOfAmmo" type="UtilityAIConsideration" parent="UtilityAIAgent/Reload Weapon Behaviour/ShouldIReloadMyWeapon"]
input_sensor_node_path = NodePath("../../../CombatSensors/MyAmmo")
activation_curve = SubResource("Curve_gb8xn")

[node name="ReloadWeapon" type="UtilityAIAction" parent="UtilityAIAgent/Reload Weapon Behaviour"]

[node name="Patrol Behaviour" type="UtilityAIBehaviour" parent="UtilityAIAgent"]
can_be_interrupted = true

[node name="ConstantScoreForDefaultBehaviour" type="UtilityAIConsideration" parent="UtilityAIAgent/Patrol Behaviour"]
activation_input_value = 0.3

[node name="ChooseRandomLocation" type="UtilityAIAction" parent="UtilityAIAgent/Patrol Behaviour"]

[node name="MoveToLocation" type="UtilityAIAction" parent="UtilityAIAgent/Patrol Behaviour"]

[node name="TeamLabel" type="Label" parent="."]
offset_left = -19.0
offset_top = -29.0
offset_right = 21.0
offset_bottom = -6.0
text = "RED"
horizontal_alignment = 1

[node name="CurrentWeaponSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(8, 0)
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_eueen")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_imrvd")

[node name="BehaviourLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = 14.0
offset_right = 20.0
offset_bottom = 37.0
label_settings = SubResource("LabelSettings_86kve")
horizontal_alignment = 1

[node name="WeaponSoundLabel" type="Label" parent="."]
offset_left = 6.5
offset_top = -24.0
offset_right = 46.5
offset_bottom = -1.0
rotation = -0.387755

[node name="ActionDurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="behaviour_changed" from="UtilityAIAgent" to="." method="_on_utility_ai_agent_behaviour_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="ActionDurationTimer" to="." method="_on_action_duration_timer_timeout"]
